tests/errors/intrinsics15.f90
program intrinsics15
    print *, set_exponent([1, 2, 3], 2)
end
